--- a/site/css/TMGPrototype2.css
+++ b/site/css/TMGPrototype2.css
@@ -1,35 +1,41 @@
-#TMGPrototype2{
+#TMGPrototype2 {
 	position: relative;
 	left: 0px;
-	display: block; 
+	display: block;
 }
 
-#TMGPrototype2 #descrHolder{
-    position: relative;
-    width: 460px;
-    left: 50%;
-    margin-left: -470px;
-    margin-top: 60px;
-    height: 500px;
-    margin-bottom: 218px;
-    display: block;
-    overflow:hidden;
+#TMGPrototype2 #descrHolder {
+	position: relative;
+	width: 460px;
+	left: 50%;
+	margin-left: -470px;
+	margin-top: 60px;
+	height: 500px;
+	margin-bottom: 218px;
+	display: block;
+	overflow: hidden;
 }
-#TMGPrototype2 #descrHolder > .descrList{
+
+#TMGPrototype2 #descrHolder>.descrList {
 	display: block;
 	padding: 0;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
-#TMGPrototype2 #descrHolder > .descrList > li{
+
+#TMGPrototype2 #descrHolder>.descrList>li {
 	display: block;
 	position: absolute;
 	width: 100%;
 	height: 100%;
 }
 
-#TMGPrototype2 #categoryList{
+#descrHolder {
+	width: 50% !important;
+}
+
+#TMGPrototype2 #categoryList {
 	position: relative;
 	display: inline-block;
 	left: 50%;
@@ -37,17 +43,20 @@
 	padding: 0;
 	width: 460px;
 }
-#TMGPrototype2 #categoryList > li{
+
+#TMGPrototype2 #categoryList>li {
 	display: block;
 	position: relative;
 	float: left;
 	margin-right: 10px;
 }
-#TMGPrototype2 #categoryList > li > img{
+
+#TMGPrototype2 #categoryList>li>img {
 	display: inline-block;
 	position: relative;
 }
-#TMGPrototype2 #categoryList > li > .setName{
+
+#TMGPrototype2 #categoryList>li>.setName {
 	position: relative;
 	cursor: pointer;
 	color: #767171;
@@ -61,15 +70,17 @@
 	-webkit-transition: 0.5s ease;
 }
 
-#TMGPrototype2 #categoryList > li > .setName:hover , #TMGPrototype2 #categoryList > li.currSet > .setName {
+#TMGPrototype2 #categoryList>li>.setName:hover,
+#TMGPrototype2 #categoryList>li.currSet>.setName {
 	background: #ac2135;
 	color: #fff;
 }
-#TMGPrototype2 #categoryList > li > .setName > span{
+
+#TMGPrototype2 #categoryList>li>.setName>span {
 	display: block;
 }
 
-#TMGPrototype2 #controlHolder{
+#TMGPrototype2 #controlHolder {
 	position: absolute;
 	left: 50%;
 	margin-left: -52px;
@@ -77,7 +88,8 @@
 	z-index: 999;
 	display: inline-block;
 }
-#TMGPrototype2 #controlHolder > ._prevButton{
+
+#TMGPrototype2 #controlHolder>._prevButton {
 	width: 53px;
 	height: 35px;
 	background: url(../images/prevnext.png) -1px -1px no-repeat #edecec;
@@ -88,7 +100,8 @@
 	-o-transition: 0.5s ease;
 	-webkit-transition: 0.5s ease;
 }
-#TMGPrototype2 #controlHolder > ._nextButton{
+
+#TMGPrototype2 #controlHolder>._nextButton {
 	width: 53px;
 	height: 35px;
 	background: url(../images/prevnext.png) -61px -1px no-repeat #edecec;
@@ -101,24 +114,29 @@
 	-webkit-transition: 0.5s ease;
 }
 
-#TMGPrototype2 #controlHolder > ._prevButton:hover, #TMGPrototype2 #controlHolder > ._nextButton:hover {
+#TMGPrototype2 #controlHolder>._prevButton:hover,
+#TMGPrototype2 #controlHolder>._nextButton:hover {
 	background-color: #ac2135 !important;
-} 
-#previewHolder{
+}
+
+#previewHolder {
 	background: #000;
 	top: 0;
 }
-#previewHolder img{
+
+#previewHolder img {
 	max-width: inherit;
 }
-#previewSpiner{
+
+#previewSpiner {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	z-index: 0;
 	display: none;
 }
-#previewSpiner > span{
+
+#previewSpiner>span {
 	width: 100%;
 	height: 100%;
 	display: block;
