--- a/site/css/grid.css
+++ b/site/css/grid.css
@@ -23,7 +23,8 @@ body {
 .container_12 {
   margin-left: auto;
   margin-right: auto;
-  width: 960px;
+  /* width: 960px; */
+  width: 100%;
 }
 
 /* `Grid >> Global
@@ -107,8 +108,12 @@ body {
   width: 620px;
 }
 
-.container_12 .grid_9 {
+/* .container_12 .grid_9 {
   width: 700px;
+} */
+
+.grid_9 {
+  width: 80%;
 }
 
 .container_12 .grid_10 {
