Agregadas páginas de donde comprar y eventos

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -72,16 +72,17 @@ h4 {
 
 p {
 	font-family:'Pathway Gothic One', sans-serif ;
-	font-size: 18px;
+	font-size: 20px;
 	margin-bottom: 18px;
 	justify-content:flex-end; 
 }
 
 .p2{
 	font-family: 'Courier New', Courier, monospace;
-	font-size: 17px;
+	font-size: 20px;
 	margin-bottom: 15px;
 	font-style: italic;
+	font-weight: bolder;
 }
 
 img {
@@ -355,12 +356,14 @@ h1 a img {
 	font-weight:600;
 }
 
-.page1 .content ul  {
-	padding-top: 5px;
+.page1 .content ul  {		/*	Contenedor para los acrosticos/bombas/poemas 	*/
+	padding-top: 15px;
+	height: auto;
 }
 
-.page1 .content ul li{
-	font-size: 16px;
+.page1 .content ul li{		/*	Tamaño de letra de los acrosticos		*/ 
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .page1 .content ul li+li {
